# NeoStats-Analytics

./: README.md  app.py  app1.py  main.py  pyproject.toml  requirements.txt
config/: config.py
models/: embeddings.py  llm.py
utils/: ingest.py  retrieval.py  vectorstore.py  websearch.py
